--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script>
     var xmlhttp = new XMLHttpRequest();
-    var url = "/v2/commerce/prices?page_size=200&page=";
+    var url = "https://api.guildwars2.com/v2/commerce/prices?page_size=200&page=";
     
     xmlhttp.onreadystatechange = function() {
       if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
