--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </script>
   <body>
     <h1>Jess Whitworth's Page of Random Awesome</h1>
-    <p>Loading Guid Wars 2 Trading Post Data</p>
+    <p id="loading-progress">Loading Guid Wars 2 Trading Post Data</p>
     <div class="info item">
       <h1 id="item-name-GS"></h1>
       <img src="#" alt="" id="item-icon-GS"/>
