--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="guildwars.js">
+  <script src="guildwars.js"></script>
+  <script>
     var greatestSpread;
     $(document).ready(function(){
       getPrices(displayGreatestSpread);
