--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="guildwars.js"></script>
   <script>
     var greatestSpread;
     $(document).ready(function(){
+      $.getScript('guildwars.js');
       getPrices(displayGreatestSpread);
     });
     
