--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="guildwars.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script>
     var greatestSpread;
     $(document).ready(function(){
-      $.getScript('guildwars.js');
       getPrices(displayGreatestSpread);
     });
     
