--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     var greatestSpread;
     $(document).ready(function(){
       getPrices(displayGreatestSpread);
+      $("#loading-progess").text("Selector works in script tag.");
     });
     
     function displayGreatestSpread() {
