--- a/index.html
+++ b/index.html
@@ -16,16 +16,11 @@
     });
     
     function displayGreatestSpread() {
-      var priceSpread = gwPrices.slice(0);
-      $("#array-progress").html("Total array items : " + priceSpread.length);
-      priceSpread.forEach(removeNoDemand);
-      $("#array-progress").append("<br />Total array items : " + priceSpread.length);
-      priceSpread.forEach(removeNoSupply);
-      $("#array-progress").append("<br />Total array items : " + priceSpread.length);
+      var priceSpread = gwPrices.filter(hasDemand);
+      priceSpread = priceSpread.filter(hasSupply);
       priceSpread.forEach(calculateSpread);
       priceSpread.sort(comparePrices);
       greatestSpread = priceSpread[0];
-      $("#array-progress").append("<br />(greatestSpread.sells.quantity == 0) : " + (greatestSpread.sells.quantity == 0));
       getItem(greatestSpread.id, displayGreatestSpread2)
     }
     function displayGreatestSpread2(item) {
