--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
       <div class="header">
         <h1>Jess Whitworth's Page of Random Awesome</h1>
       </div>
-      <div class="info item">
-        <h2 id="item-name-GS"></h1>
-        <img src="#" alt="" id="item-icon-GS"/>
-        <dl>
-          <dt>Buy Price</dt>
-          <dd id="buy-price-GS"></dd>
-          <dt>Sell Price</dt>
-          <dd id="sell-price-GS"></dd>
-        </dl>
+      <div class="content">
+        <div class="info item">
+          <h2 id="item-name-GS"></h1>
+          <img src="#" alt="" id="item-icon-GS"/>
+          <dl>
+            <dt>Buy Price</dt>
+            <dd id="buy-price-GS"></dd>
+            <dt>Sell Price</dt>
+            <dd id="sell-price-GS"></dd>
+          </dl>
+        </div>
       </div>
     </div>
   </body>
