--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="description" content="Randomly awesome things I randomly decided to make.">
   <meta name="author" content="Jess Whitworth">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
