--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <h1>Jess Whitworth's Page of Random Awesome</h1>
       </div>
       <div class="content">
+        <h2>Guild Wars TP Spread</h2>
         <div class="info item">
-          <h2 id="item-name-GS"></h1>
+          <h3 class="item-name" id="item-name-GS"></h3>
           <img src="#" alt="" id="item-icon-GS"/>
           <dl>
             <dt>Buy Price</dt>
