--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       </div>
       <div class="content">
         <h2>Guild Wars TP Spread</h2>
+        <form>
+          <input type="range" name="minmaxspread" min="0" max="1000000" step="100" value="100">
+        </form>
         <div class="info item">
           <h3 class="item-name" id="item-name-GS"></h3>
           <img src="#" alt="" id="item-icon-GS"/>
