--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       </div>
       <div class="content">
         <h2>Guild Wars TP Spread</h2>
-        <form>
+        <form oninput="x.value=minmaxspread.value">
           <input type="range" name="minmaxspread" min="0" max="1000000" step="100" value="100">
+          <output name="x"></output>
         </form>
         <div class="info item">
           <h3 class="item-name" id="item-name-GS"></h3>
