--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       </div>
       <div class="content">
         <h2>Guild Wars TP Spread</h2>
-        <form oninput="x.value=minmaxspread.value">
+        <form oninput="x.value=goldmax * 100 + silvermax">
           <legend>Filters</legend>
           Max Spread<br />
           Gold
-          <input type="range" name="minmaxspread" min="0" max="3000" step="1" value="0">
+          <input type="range" name="goldmax" min="0" max="3000" step="1" value="0">
           Silver
-          <input type="range" name="minmaxspread" min="0" max="99" step="1" value="0">
+          <input type="range" name="silvermax" min="0" max="99" step="1" value="0">
           <output name="x" value="0"></output>
         </form>
         <div class="info item">
