--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="content">
         <h2>Guild Wars TP Spread</h2>
-        <form oninput="x.value=goldmax * 100 + silvermax">
+        <form oninput="x.value=goldmax.value * 100 + silvermax.value">
           <legend>Filters</legend>
           Max Spread<br />
           Gold
