--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
           <legend>Filters</legend>
           Max Spread<br />
           Gold
-          <input type="range" name="goldmax" min="0" max="3000" step="1" value="0">
+          <input type="number" name="goldmax" min="0" max="3000" value="0">
           Silver
-          <input type="range" name="silvermax" min="0" max="99" step="1" value="0">
-          <output name="x" value="0"></output>
+          <input type="number" name="silvermax" min="0" max="99" value="0">
         </form>
         <div class="info item">
           <h3 class="item-name" id="item-name-GS"></h3>
