--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
           <input type="number" name="silvermax" min="0" max="99" value="0">
         </form>
         <div class="info item" id="current-item">
-          <h3 class="item-name" id="item-name"></h3>
-          <img src="#" alt="" id="item-icon"/>
+          <h3 class="item-name"></h3>
+          <img src="#" alt="" class="item-icon"/>
           <dl>
             <dt>Buy Price</dt>
-            <dd id="buy-price"></dd>
+            <dd class="buy-price"></dd>
             <dt>Sell Price</dt>
-            <dd id="sell-price"></dd>
+            <dd class="sell-price"></dd>
           </dl>
         </div>
         </div>
         <div class="info item" id="next-item">
-          <h3 class="item-name" id="item-name"></h3>
-          <img src="#" alt="" id="item-icon"/>
+          <h3 class="item-name"></h3>
+          <img src="#" alt="" class="item-icon"/>
           <dl>
             <dt>Buy Price</dt>
-            <dd id="buy-price"></dd>
+            <dd class="buy-price"></dd>
             <dt>Sell Price</dt>
-            <dd id="sell-price"></dd>
+            <dd class="sell-price"></dd>
           </dl>
         </div>
       </div>
