Laying out the form.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
         <h2>Guild Wars TP Spread</h2>
         <form id="spreadfilters" oninput="setSpreadFilters()">
           <legend>Filters</legend>
-          Max Spread<br />
-          Gold
-          <input type="number" name="goldmax" min="0" max="3000" value="0">
-          Silver
-          <input type="number" name="silvermax" min="0" max="99" value="0">
+          Max Spread
+          <input type="number" name="goldmax" min="0" max="3000" value="0">Gold</input>
+          <input type="number" name="silvermax" min="0" max="99" value="0">Silver</input>
         </form>
         <div class="info item" id="current-item">
           <h3 class="item-name"></h3>
