Removed Legend, Became Legend.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="content">
         <h2>Guild Wars TP Spread</h2>
         <form id="spreadfilters" oninput="setSpreadFilters()">
-          <legend>Filters</legend>
+          <h2>Filters</h2>
           Max Spread
           <input type="number" name="goldmax" min="0" max="3000" value="0">Gold</input>
           <input type="number" name="silvermax" min="0" max="99" value="0">Silver</input>
