--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <title>Jess Whitworth's Page of Random Awesome</title>
-  <meta name="description" content="Randomly awesome things I randomly decided to make.">
+  <title>GW2 Tips and Tools</title>
+  <meta name="description" content="Guild Wars 2 calculators, tools, tips and guides.">
   <meta name="author" content="Jess Whitworth">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +15,10 @@
   <body>
     <div class="page">
       <div class="header">
-        <h1>Jess Whitworth's Page of Random Awesome</h1>
+        <h1>GW2 Tips and Tools</h1>
       </div>
       <div class="content">
+        <h1>Guild Wars Tools</h1>
         <h2>Guild Wars TP Spread</h2>
         <form id="spreadfilters" oninput="setSpreadFilters()">
           <h2>Filters</h2>
