--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
         <form id="spreadfilters" oninput="setSpreadFilters()">
           <h2>Filters</h2>
           Max Spread
-          <input type="number" name="goldmax" min="0" max="3000" value="0">Gold</input>
-          <input type="number" name="silvermax" min="0" max="99" value="0">Silver</input>
+          <input type="number" name="goldmax" value="3000">Gold</input>
+          <input type="number" name="silvermax" value="0">Silver</input>
+          Min Spread
+          <input type="number" name="goldmin" value="0">Gold</input>
+          <input type="number" name="silvermin" value="0">Silver</input>
+          Max Buy
+          <input type="number" name="goldmaxbuy" value="30000">Gold</input>
+          <input type="number" name="silvermaxbuy" value="0">Silver</input>
         </form>
         <div class="info item" id="current-item">
           <h3 class="item-name"></h3>
