--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
         <h2>Guild Wars TP Spread</h2>
         <form id="spreadfilters" oninput="setSpreadFilters()">
           <h2>Filters</h2>
-          Max Spread
-          <input type="number" name="goldmax" value="3000">Gold</input>
-          <input type="number" name="silvermax" value="0">Silver</input>
-          Min Spread
-          <input type="number" name="goldmin" value="0">Gold</input>
-          <input type="number" name="silvermin" value="0">Silver</input>
-          Max Buy
-          <input type="number" name="goldmaxbuy" value="30000">Gold</input>
-          <input type="number" name="silvermaxbuy" value="0">Silver</input>
+          <div>
+            Max Spread
+            <input type="number" name="goldmax" value="3000">Gold</input>
+            <input type="number" name="silvermax" value="0">Silver</input>
+          </div>
+          <div>
+            Min Spread
+            <input type="number" name="goldmin" value="0">Gold</input>
+            <input type="number" name="silvermin" value="0">Silver</input>
+          </div>
+          <div>
+            Max Buy
+            <input type="number" name="goldmaxbuy" value="30000">Gold</input>
+            <input type="number" name="silvermaxbuy" value="0">Silver</input>
+          </div>
         </form>
         <div class="info item" id="current-item">
           <h3 class="item-name"></h3>
