--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <input type="number" name="silvermaxbuy" value="0">Silver</input>
           </div>
         </form>
-        <div class="info item" id="current-item">
+        <div class="info item stack" id="current-item">
           <h3 class="item-name"></h3>
           <img src="#" alt="" class="item-icon"/>
           <dl>
@@ -48,7 +48,7 @@
             <dd class="sell-price"></dd>
           </dl>
         </div>
-        <div class="info item" id="next-item">
+        <div class="info item stack" id="next-item">
           <h3 class="item-name"></h3>
           <img src="#" alt="" class="item-icon"/>
           <dl>
