--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <dd class="sell-price"></dd>
           </dl>
         </div>
-        <div class="info item stack" id="next-item">
+        <div class="info item stack next" id="next-item">
           <h3 class="item-name"></h3>
           <img src="#" alt="" class="item-icon"/>
           <dl>
