--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
             <dd class="sell-price"></dd>
           </dl>
         </div>
+        <h2>Guild Wars Crafting Profit</h2>
+        <form id="craftingprofit" oninput="setProfitFilters()">
+          <h2>Account & Discipline Selection</h2>
+          <div>
+            API Key
+            <input type="text" name="apikey">API Key</input>
+          </div>
+          <div>
+            Character
+            <select name="characters" id="characterDD">
+            	
+            </select>
+          </div>
+        </form>
       </div>
     </div>
   </body>
