--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <h2>Guild Wars Crafting Profit</h2>
         <form id="craftingprofit" oninput="setProfitFilters()">
-          <h2>Account & Discipline Selection</h2>
+          <h2>Account &amp; Discipline Selection</h2>
           <div>
             API Key
             <input type="text" name="apikey">API Key</input>
