--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </dl>
         </div>
         <h2>Guild Wars Crafting Profit</h2>
-        <form id="craftingprofit" onsubmit=" return setProfitFilters()">
+        <form id="craftingprofit" onsubmit="setProfitFilters()">
           <h2>Account &amp; Discipline Selection</h2>
           <input type="submit" value="Update">
           <div>
