--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
             <select name="characters" id="characterDD">
             </select>
           </div>
+          <div>
+            Discipline
+            <select name="discipline" id="disciplineDD">
+            </select>
+          </div>
         </form>
       </div>
     </div>
