--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
             </select>
           </div>
         </form>
+        <div>
+        	<h3>Crafting Ingredients</h3>
+        	<div id="ingredientsCP">
+        		<ul id="ingredients">
+        		</ul>
+        	</div>
+        </div>
       </div>
     </div>
   </body>
