--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </div>
       <div class="content">
         <h1>Guild Wars Tools</h1>
+        <div id="tpspread">
         <h2>Guild Wars TP Spread</h2>
         <form id="spreadfilters" oninput="setSpreadFilters()">
           <h2>Filters</h2>
@@ -58,6 +59,8 @@
             <dd class="sell-price"></dd>
           </dl>
         </div>
+        </div>
+        <div id="craftprofit">
         <h2>Guild Wars Crafting Profit</h2>
         <form id="craftingprofit" onsubmit="setProfitFilters()">
           <h2>Account &amp; Discipline Selection</h2>
@@ -83,6 +86,7 @@
         		<ul id="ingredients">
         		</ul>
         	</div>
+        </div>
         </div>
         <p id="debug"></p>
       </div>
