--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Guild Wars Tools</h1>
       <ul class="navigation">
       	<li class="menu" id="spreadNav">Trading Post Spread</li>
-      	<li class="menu" id="craftingNav">Crafting Profit</li>
+      	<li class="menu activeNav" id="craftingNav">Crafting Profit</li>
       </ul>
         <div id="tpspread">
         <h2>Guild Wars TP Spread</h2>
