--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       	<li class="menu" id="spreadNav">Trading Post Spread
       	</li><li class="menu activeNav" id="craftingNav">Crafting Profit</li>
       </ul>
-        <div id="tpspread">
+        <div id="tpspread" class="hidden">
         <h2>Guild Wars TP Spread</h2>
         <form id="spreadfilters" oninput="setSpreadFilters()">
           <h2>Filters</h2>
@@ -64,7 +64,7 @@
           </dl>
         </div>
         </div>
-        <div id="craftprofit">
+        <div id="craftprofit" class="hidden">
         <h2>Guild Wars Crafting Profit</h2>
         <form id="craftingprofit" onsubmit="setProfitFilters()">
           <h2>Account &amp; Discipline Selection</h2>
