--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <h1>GW2 Tips and Tools</h1>
       </div>
       <div class="content">
+      <h1>Guild Wars Tips</h1>
+	  <p>Rich Iron Ore Run: [&amp;BGMAAAA=][&amp;BAQAAAA=][&amp;BBIAAAA=][&amp;BKsAAAA=][&amp;BJMBAAA=]
+	  [&amp;BFEGAAA=][&amp;BL8AAAA=][&amp;BF0CAAA=][&amp;BF4BAAA=][&amp;BP0BAAA=][&amp;BEsBAAA=]</p>
       <h1>Guild Wars Tools</h1>
       <ul class="navigation">
       	<li class="menu" id="spreadNav">Trading Post Spread
