--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="js/utility/stackoverflow.js" />
-	<script src="js/gw2/tools.js" />
+	<script src="js/utility/stackoverflow.js"></script>
+	<script src="js/gw2/tools.js"></script>
 	<body>
 		<div class="page">
 			<div class="header">
