--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 			<div class="header">
 				<h1>GW2 Tips and Tools</h1>
 			</div>
-			<div class="content">
-				<p id="debug"></p>
-			</div>
+			<div class="content"></div>
 		</div>
 	</body>
 </html>
